integrate ffmpeg lib

--- a/src/meson.build
+++ b/src/meson.build
@@ -1,6 +1,8 @@
-project('timer', 'cpp', version : '0.1.0',
+project('main', 'cpp', version : '0.1.0',
                  default_options : ['cpp_std=c++11'])
 
-pocodep = dependency('Poco')
+ffmpeg = dependency('ffmpeg')
 
-executable('timer', 'timer.cpp', dependencies : pocodep)
+src =   ['main.cpp']
+
+executable('main', sources: src, dependencies : ffmpeg)
